<resources>
    <string name="app_name">RIGLogger</string>
    <string name="title_home">Logger</string>
    <string name="title_rigctl">RIG Control</string>
    <string name="title_settings">Settings</string>
    <string name="pref_cloudlog_configuration">Cloudlog Configuration</string>
    <string name="pref_cloudlog_url">Cloudlog URL</string>
    <string name="pref_enter_the_url_for_cloudlog">Enter the URL for Cloudlog</string>
    <string name="pref_please_enter_the_url_ending_with_index_php_if_no_rewriting_rules_applied">Please enter the URL ending with /index.php if no rewriting rules applied.</string>
    <string name="pref_cloudlog_api_key">Cloudlog API Key</string>
    <string name="pref_enter_the_api_key_for_cloudlog">Enter the API Key for Cloudlog</string>
    <string name="pref_please_enter_the_api_key_typically_starting_with_cl">Please enter the API Key, typically starting with `cl\'.</string>
    <string name="serial_no_driver">Serial port doesn\'t have a driver attached.</string>
    <string name="serial_connect_no_access">Could not access the serial port.</string>
    <string name="serial_connect_failed">Failed to connect to the serial port: </string>
    <string name="rig_connected">Connected to %1$s</string>
    <string name="rig_control_failed_due_to_network_problems">RIG control failed, network problem</string>
    <string name="successfully_connected_to">Successfully connected to %1$s!</string>
    <string name="rig_control_failed_port_not_found">RIG control failed, port not found</string>
    <string name="failed_to_connect_to">Failed to connect to %1$s</string>
    <string name="disconnected">%1$s disconnected</string>
    <string name="error_occurred_in">Error occurred in %1$s: %2$s</string>
    <string name="rig_control_won_t_upload_cloudlog_settings_not_found">RIG control won\'t upload: Cloudlog settings not configured</string>
    <string name="rig_control_failed_cloudlog_returned">RIG control failed: cloudlog returned %1$d</string>
    <string name="p_unable_to_find_a_url_to_visit_please_configure_it_in_settings_p"><![CDATA[<p>Unable to find a URL to visit, please configure it in settings.</p>]]></string>
    <string name="rig">RIG</string>
    <string name="port">Port</string>
    <string name="baudrate">Baudrate</string>
    <string name="databits">Databits</string>
    <string name="stopbits">Stopbits</string>
    <string name="parity">Parity</string>
    <string name="on_air">ON AIR</string>
    <string name="rig_type">RIG Type</string>
    <string name="select_a_radio_type_to_connect">Select a radio type to connect.</string>
    <string name="refresh">Refresh</string>
    <string name="rig_control_failed_invalid_rig">RIG control failed, invalid rig</string>
</resources>